# HPRC_metadata

./: .gitignore  .readthedocs.yaml  README.md  aggregate_sample_metadata.py  hprc-sample-merge.ipynb  hprc_metadata_ONT_1_submitter_sample_files_missing.tsv  hprc_metadata_sample_aggregate_DEEPCONSENSUS.tsv  hprc_metadata_sample_aggregate_HiFi.tsv  hprc_metadata_sample_aggregate_ONT.tsv  hprc_metadata_sample_files_DEEPCONSENSUS.tsv  hprc_metadata_sample_files_missing_1_submitter_HiFi.tsv  hprc_metadata_sample_files_missing_1_submitter_ONT.tsv  merge_metadata.py  merge_metadata_v2.py  pyproject.toml  s3_qc_wrangler.ipynb
config/dev/: hifi_qc_template.py  ont_qc_input_mapping.csv  prefixes.json
data/: README.md  s3-bucket.tsv
data-tables/: hprc-sample-merge.ipynb
data-tables/aggregate-sample-inputs/: hprc_1_submitter_columns_DEEPCONSENSUS.tsv  hprc_1_submitter_columns_ONT.tsv  hprc_5_readstats_columns_HiFi.tsv  hprc_5_readstats_columns_ONT.tsv
data-tables/aggregate-sample-outputs/: hprc_metadata_sample_aggregate_total.tsv
data-tables/create-biosample-identifiers/: Human.1.0-HPRC-Production-20240409.xlsx  (+1 more)
data/SRA/: table_download.tsv
submissions/: readme.md
utils/: HPRC_PLUS_nanopore_misc_R2_data_table__final.csv  README.md  aggregate_sample_metadata.py  all_files__all_gs__some_sra__less_columns.tsv  merge_metadata.py  not_in_any_index_sheet.tsv  readme.md  s3_to_gcs_transfer.slurm  tablesmasher-warnings.md  tablesmasher.py  transfer.wdl  transfer_alt.wdl  transfer_complex.sh  transfer_simple.sh  validate_and_combine_per_submission.py  validate_data_tables.py
(+2865 files in other folders)
