[build-system]
requires = [
	"flit_core >=3.2,<4",
	"python_version >= '3.9'"
	]
build-backend = "flit_core.buildapi"

[project]
name = "hprc-metadata"
authors = [{name = "Andrew Blair", email = "apblair@ucsc.edu"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["pytest", "numpy", "scipy", "matplotlib", "scikit-learn", "sphinx", "sphinx_rtd_theme"]

[project.urls]
Home = "https://github.com/human-pangenomics/HPRC_metadata"